# co2-exporter

./: Cargo.toml  README.md  flake.nix
src/: co2_linux_reader.rs  co2_parse.rs  main.rs
