[package]
name = "co2-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.4.2"
anyhow = "1.0.65"
rocket = "0.5.0-rc.2"

[package.metadata.riff]
build-inputs = [ "hidapi", "libusb1" ]
